test/types/cptr/c_ptrTo_domain.1.good
$CHPL_HOME/modules/standard/Errors.chpl:647: In function 'compilerError':
$CHPL_HOME/modules/standard/Errors.chpl:648: warning: compiler diagnostic depth value exceeds call stack depth
  $CHPL_HOME/modules/standard/CTypes.chpl:1110: called as compilerError(param msg(0) = "c_ptrTo domain type not supported", param errorDepth = 2) from function 'c_ptrTo'
  c_ptrTo_domain.chpl:8: called as c_ptrTo(x: domain(1,int(64),one))
c_ptrTo_domain.chpl:8: error: c_ptrTo domain type not supported
